--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-thrift-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Thrift client plugin for egg",
   "eggPlugin": {
     "name": "thriftClient"
@@ -47,12 +47,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eggjs/egg-thrift-client.git"
+    "url": "git+https://github.com/mecoepcoo/egg-thrift-client.git"
   },
   "bugs": {
-    "url": "https://github.com/eggjs/egg/issues"
+    "url": "https://github.com/mecoepcoo/egg-thrift-client/issues"
   },
-  "homepage": "https://github.com/eggjs/egg-thrift-client#readme",
+  "homepage": "https://github.com/mecoepcoo/egg-thrift-client#readme",
   "author": "Tianzhen",
   "license": "MIT"
 }
